apps/gcp/tibuild/v2/reference-grant-ee-portal.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ee-portal-to-tibuild
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: ee-portal
  to:
    - group: ""
      kind: Service
